--- a/app/templates/pages/support.html
+++ b/app/templates/pages/support.html
@@ -99,9 +99,9 @@
                                     </div>
                                     <!-- FULL-SCREEN -->
                                     <div class="dropdown  d-flex notifications">
-                                        <a class="nav-link icon" data-bs-toggle="dropdown"><i
+                                        <!-- <a class="nav-link icon" data-bs-toggle="dropdown"><i
                                                 class="fe fe-bell"></i><span class=" pulse"></span>
-                                        </a>
+                                        </a> -->
                                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                                             <div class="drop-heading border-bottom">
                                                 <div class="d-flex">
