--- a/app/templates/theme/pages/cart/cart.html
+++ b/app/templates/theme/pages/cart/cart.html
@@ -5,35 +5,68 @@
 {% endblock %}
 
 {% block content %}
-    <div class="main-content app-content mt-0">
-        <div class="side-app">
+<div class="main-content app-content mt-0">
+    <div class="side-app">
 
-            <!-- CONTAINER -->
-            <div class="main-container container-fluid">
+        <!-- CONTAINER -->
+        <div class="main-container container-fluid">
 
-                <!-- PAGE-HEADER -->
-                <div class="page-header">
-                    <h1 class="page-title">Корзина</h1>
-                    <div>
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="javascript:void(0)">Магазин</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Корзина</li>
-                        </ol>
-                    </div>
+            <!-- PAGE-HEADER -->
+            <div class="page-header">
+                <h1 class="page-title">Корзина</h1>
+                <div>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="javascript:void(0)">Магазин</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Корзина</li>
+                    </ol>
                 </div>
-                <!-- PAGE-HEADER END -->
+            </div>
+            <!-- PAGE-HEADER END -->
 
-                <!-- ROW-1 OPEN -->
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xl-8">
-                        <div class="card cart">
-                            <div class="card-header">
-                                <h3 class="card-title">Список покупок</h3>
-                            </div>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table table-bordered table-vcenter">
-                                        <thead>
+            <!-- ROW-1 OPEN -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xl-8">
+                    <div class="card cart">
+                        <div class="card-header">
+                            <h3 class="card-title">Список покупок</h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+
+                                {% for item in cart %}
+                                {% with product=item.product %}
+                                <div class="wrapper">
+                                    <div class="text-center">
+                                        <img src="/static/assets/images/media/server.png" alt=""
+                                            class="cart-img text-center">
+                                    </div>
+                                    <p class="wrapper__text" style="align-items: flex-start;">
+                                        Название: <span>{{ product.title }} </span>
+                                    </p>
+                                    <p class="wrapper__text">
+                                        Цена: <span>{{ product.price }}$</span>
+                                    </p>
+                                    <p class="wrapper__text">
+                                        Количество: <span> {{ item.quantity }}</span>
+                                    </p>
+                                    <p class="wrapper__text">
+                                        Итоговая цена: <span> {{ item.total_price }}$</span>
+                                    </p>
+                                    <div class="wrapper__btns">
+                                        <div class=" d-flex g-2">
+                                            <a class="btn text-danger bg-danger-transparent btn-icon py-1"
+                                                data-bs-toggle="tooltip" data-bs-original-title="Delete"
+                                                href="/cart/remove/{{ product.id }}/{{ item.optional }}"><span
+                                                    class="bi bi-trash fs-16"></span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% endwith %}
+                                {% endfor %}
+
+
+                                <table class="table table-bordered table-vcenter">
+                                    <thead>
                                         <tr class="border-top">
                                             <th>Товар</th>
                                             <th>Название</th>
@@ -42,68 +75,76 @@
                                             <th>Итоговая цена</th>
                                             <th>Действия</th>
                                         </tr>
-                                        </thead>
-                                        <tbody>
+                                    </thead>
+                                    <tbody>
                                         {% for item in cart %}
-                                                {% with product=item.product %}
-                                                <tr>
-                                                    <td>
-                                                        <div class="text-center">
-                                                            <img src="/static/assets/images/media/server.png" alt="" class="cart-img text-center">
-                                                        </div>
-                                                    </td>
-                                                    <td>{{ product.title }}</td>
-                                                    <td class="fw-bold">${{ product.price }}</td>
-                                                    <td><div class="text-center">{{ item.quantity }}</div></td>
-                                                    <td>${{ item.total_price }}</td>
-                                                    {{ item.optional }}
-                                                    <td>
-                                                        <div class=" d-flex g-2">
-                                                            <a class="btn text-danger bg-danger-transparent btn-icon py-1" data-bs-toggle="tooltip" data-bs-original-title="Delete" href="/cart/remove/{{ product.id }}/{{ item.optional }}"><span class="bi bi-trash fs-16"></span></a>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            {% endwith %}
+                                        {% with product=item.product %}
+                                        <tr>
+                                            <td>
+                                                <div class="text-center">
+                                                    <img src="/static/assets/images/media/server.png" alt=""
+                                                        class="cart-img text-center">
+                                                </div>
+                                            </td>
+                                            <td>{{ product.title }}</td>
+                                            <td class="fw-bold">${{ product.price }}</td>
+                                            <td>
+                                                <div class="text-center">{{ item.quantity }}</div>
+                                            </td>
+                                            <td>${{ item.total_price }}</td>
+                                            <td>
+                                                <div class=" d-flex g-2">
+                                                    <a class="btn text-danger bg-danger-transparent btn-icon py-1"
+                                                        data-bs-toggle="tooltip" data-bs-original-title="Delete"
+                                                        href="/cart/remove/{{ product.id }}/{{ item.optional }}"><span
+                                                            class="bi bi-trash fs-16"></span></a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        {% endwith %}
                                         {% endfor %}
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-xl-4 col-sm-12 col-md-12">
-                        <div class="card">
-                            <div class="card-header">
-                                <div class="card-title">Детали оплаты</div>
-                            </div>
-                            <div class="card-body py-2">
-                                <div class="table-responsive">
-                                    <table class="table table-borderless text-nowrap mb-0">
-                                        <tbody>
-                                        <tr>
-                                            <td class="text-start">Итоговая цена</td>
-                                            <td class="text-end"><span class="fw-bold  ms-auto">${{ cart.get_total_price }}</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td class="text-start fs-18">Итого к оплате:</td>
-                                            <td class="text-end"><span class="ms-2 fw-bold fs-23">${{ cart.get_total_price }}</span></td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="btn-list">
-                                    <a href="{% url 'shop:shop' %}" class="btn btn-primary"><i class="fa fa-arrow-left me-1"></i>Продолжить покупки</a>
-                                    <a href="/optional/" class="btn btn-success float-sm-end">Выбрать дополнительные услуги<i class="fa fa-arrow-right ms-1"></i></a>
-                                </div>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- ROW-1 CLOSED -->
+                <div class="col-lg-12 col-xl-4 col-sm-12 col-md-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title">Детали оплаты</div>
+                        </div>
+                        <div class="card-body py-2">
+                            <div class="table-responsive">
+                                <table class="table table-borderless text-nowrap mb-0">
+                                    <tbody>
+                                        <tr>
+                                            <td class="text-start">Итоговая цена</td>
+                                            <td class="text-end"><span class="fw-bold  ms-auto">${{ cart.get_total_price}}</span></td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-start fs-18">Итого к оплате:</td>
+                                            <td class="text-end"><span
+                                                    class="ms-2 fw-bold fs-23">${{cart.get_total_price }}</span></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="btn-list">
+                                <a href="{% url 'shop:shop' %}" class="btn btn-primary"><i
+                                        class="fa fa-arrow-left me-1"></i>Продолжить покупки</a>
+                                <a href="/optional/" class="btn btn-success float-sm-end">Выбрать дополнительные
+                                    услуги<i class="fa fa-arrow-right ms-1"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- CONTAINER CLOSED -->
+            <!-- ROW-1 CLOSED -->
         </div>
+        <!-- CONTAINER CLOSED -->
     </div>
+</div>
 {% endblock %}
