--- a/app/static/assets/css/style.css
+++ b/app/static/assets/css/style.css
@@ -76098,5 +76098,67 @@ textarea.form-control {
 .header-brand-img{
     height: 100%;
 }
+.wrapper__head {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+.wrapper__head__item {
+    width: 45%;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 2%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+}
 
+.wrapper__head__item span {
+    font-size: 25px;
+
+}
+
+.wrapper__head__text {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    gap:5px;
+}
+
+.wrapp__min {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap:10px;
+}
+
+.wrapp__min__item {
+    height: 45%;
+    display: flex;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 10px;
+    align-items: center;
+}
+
+
+.wrapp__min__text {
+    margin:0;
+}
+
+@media (max-width: 768px) {
+    .wrapper__head {
+    flex-direction: column;
+       gap:10px;
+    }
+    .wrapp__min {
+    width: 100%;
+        gap:10px;
+    }
+    .wrapper__head__item {
+        width: 100%;
+}
 /*# sourceMappingURL=style.css.map */
